Import of GRAYKOT/Net-Whois-Gateway-Server-0.05 from CPAN.
gitpan-cpan-distribution: Net-Whois-Gateway-Server
gitpan-cpan-version:      0.05
gitpan-cpan-path:         GRAYKOT/Net-Whois-Gateway-Server-0.05.tar.gz
gitpan-cpan-author:       GRAYKOT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
 0.04	Feb 26 2008	Sergey Kotenko
 	- Tests added.
 	- Updated documentation.
+0.05	Mar 03 2008	Sergey Kotenko
+	- Fixed script/init.d/whois-gateway to start correctly.
+	- Use all external interfaces IPs by default in script/whois-gateway-d
