--- a/Changes
+++ b/Changes
@@ -10,3 +10,9 @@
 	
 0.07	Mar 12 2008	Sergey Kotenko
 	- ping() added
+
+0.08b1	30 Jan 2009	Pavel Boldin
+	- cosmetic code changes
+
+0.08b2	30 Jan 2009	Walery Studennikov
+	- fix Makefile.PL
